Updated to version 1.2
- Added Vanguard logo imitation.
- Added version display at bottom left corner

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,7 +13,7 @@
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        FontFamily="{DynamicResource MaterialDesignFont}" Icon="/logo.png">
     <Grid>
 
         <TextBlock
@@ -35,19 +35,17 @@
 
         <TextBlock
             Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="397,173,0,0" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="139" FontSize="20"><Run Language="hu-hu" Text="Run at startup:"/></TextBlock>
-        <Border BorderThickness="5" BorderBrush="#FF5B5B5B" HorizontalAlignment="Right" Margin="0,61,263,238" Width="2"/>
+        <Border BorderThickness="5" BorderBrush="#FF5B5B5B" HorizontalAlignment="Right" Margin="0,61,263,339" Width="2"/>
 
         <TextBlock
-            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,76,60,0" FontStyle="Normal" Height="83" VerticalAlignment="Top" HorizontalAlignment="Right" Width="190" FontSize="16"><Run Text="Don't forget to support "/><Run Text="my"/><LineBreak/><Run Text="work by giving "/><Run Text="me"/><Run Text=" a star"/><LineBreak/><Run Text="on GitHub"/><Run Text=" "/><Run Text="or by "/><Run Text="buying"/><LineBreak/><Run Text="me a coffee"/><Run Text="!"/><Run Language="hu-hu" Text=" ☕"/></TextBlock>
+            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,76,60,0" FontStyle="Normal" Height="83" VerticalAlignment="Top" HorizontalAlignment="Right" Width="190" FontSize="16"><Run Text="Don't forget to support "/><Run Text="my"/><LineBreak/><Run Text="work by giving "/><Run Text="me"/><Run Text=" a star"/><LineBreak/><Run Text="on GitHub"/><Run Text=" "/><Run Text="or "/><Run Text="by sharing"/><LineBreak/><Run Text="the apps I make."/><Run Language="hu-hu" Text=" 😁"/></TextBlock>
         <TextBlock x:Name="ikleventeLink"
             Style="{StaticResource MaterialDesignTextBlock}" Margin="0,166,136,0" FontSize="12" HorizontalAlignment="Right" Width="114" Height="22" VerticalAlignment="Top"><Hyperlink Click="Hyperlink_Click">github.com/iklevente</Hyperlink></TextBlock>
 
         <TextBlock
-            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,220,76,0" FontStyle="Italic" HorizontalAlignment="Right" Width="174" Height="80" VerticalAlignment="Top"><Run Text="Hand-crafted by iklevente"/><LineBreak/><Run Text="with "/><Run Text="pleasure"/><Run Text=" and"/><Run Text=" "/><Run Text="100%"/><LineBreak/><Run Text="open source"/><Run Text=" "/><Run Text="intentions."/><LineBreak/><Run Text="Free to use for any purpose,"/><Run/><LineBreak/><Run Text="f"/><Run Text="orever."/><LineBreak/><Run/></TextBlock>
+            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,0,0,6" FontStyle="Italic" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="148"><Run Text="Hand-crafted by iklevente"/><Run Language="hu-hu" Text="."/><LineBreak/><LineBreak/><Run/></TextBlock>
         <TextBlock x:Name="infoText"
             Style="{StaticResource MaterialDesignBody1TextBlock}" x:FieldModifier="public" Margin="0,454,0,0" Height="32" VerticalAlignment="Top" HorizontalAlignment="Center" Width="580" FontSize="18" TextAlignment="Center" Text="infoText"/>
-        <TextBlock x:Name="ikleventeDonateLink"
-            Style="{StaticResource MaterialDesignTextBlock}" Margin="0,193,137,0" FontSize="12" HorizontalAlignment="Right" Width="113" Height="21" VerticalAlignment="Top"><Hyperlink Click="Hyperlink_Click2"><Run Text="paypal.me/iklevi"/></Hyperlink></TextBlock>
 
         <Button x:Name="restartButton"
             Style="{StaticResource MaterialDesignRaisedLightButton}"
@@ -62,5 +60,8 @@
             Style="{StaticResource MaterialDesignSwitchToggleButton}"
             ToolTip="MaterialDesignSwitchLightToggleButton"
             IsChecked="True" Margin="541,255,0,0" Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="49" Background="#FFD1373A" Checked="trayToggler_Checked" Unchecked="trayToggler_Unchecked" />
+        <Image Margin="55,54,0,0" Stretch="Fill" Source="logo.png" Height="198" VerticalAlignment="Top" HorizontalAlignment="Left" Width="171"/>
+        <TextBlock
+            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="10,0,842,6" FontStyle="Italic" Height="23" VerticalAlignment="Bottom"><Run Language="hu-hu" Text="version 1.2"/><LineBreak/><LineBreak/><Run/></TextBlock>
     </Grid>
 </Window>
