--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal"
         TextOptions.TextRenderingMode="Auto"
-        Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+        Background="{DynamicResource MaterialDesignBackground}"
         FontFamily="{DynamicResource MaterialDesignFont}" Icon="/logo.png">
     <Grid>
 
@@ -30,8 +30,7 @@
 
         <ToggleButton x:Name="toggler"
             Style="{StaticResource MaterialDesignSwitchToggleButton}"
-            ToolTip="MaterialDesignSwitchLightToggleButton"
-            IsChecked="True" Margin="541,177,0,0" Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="49" Background="#FFD1373A" Checked="toggler_Checked" Unchecked="toggler_Unchecked" />
+            ToolTip="MaterialDesignSwitchLightToggleButton" Margin="541,177,0,0" Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="49" Background="#FFD1373A" Checked="toggler_Checked" Unchecked="toggler_Unchecked" />
 
         <TextBlock
             Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="397,173,0,0" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="139" FontSize="20"><Run Language="hu-hu" Text="Run at startup:"/></TextBlock>
@@ -39,8 +38,10 @@
 
         <TextBlock
             Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,76,60,0" FontStyle="Normal" Height="83" VerticalAlignment="Top" HorizontalAlignment="Right" Width="190" FontSize="16"><Run Text="Don't forget to support "/><Run Text="my"/><LineBreak/><Run Text="work by giving "/><Run Text="me"/><Run Text=" a star"/><LineBreak/><Run Text="on GitHub"/><Run Text=" "/><Run Text="or "/><Run Text="by sharing"/><LineBreak/><Run Text="the apps I make."/><Run Language="hu-hu" Text=" 😁"/></TextBlock>
-        <TextBlock x:Name="ikleventeLink"
+        <TextBlock x:Name="ikleventeGitHubLink"
             Style="{StaticResource MaterialDesignTextBlock}" Margin="0,166,136,0" FontSize="12" HorizontalAlignment="Right" Width="114" Height="22" VerticalAlignment="Top"><Hyperlink Click="Hyperlink_Click">github.com/iklevente</Hyperlink></TextBlock>
+        <TextBlock x:Name="ikleventeKofiLink"
+            Style="{StaticResource MaterialDesignTextBlock}" Margin="0,194,136,0" FontSize="12" HorizontalAlignment="Right" Width="114" Height="22" VerticalAlignment="Top"><Hyperlink Click="Hyperlink_Click2">ko-fi.com/iklevente</Hyperlink></TextBlock>
 
         <TextBlock
             Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="0,0,0,6" FontStyle="Italic" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="148"><Run Text="Hand-crafted by iklevente"/><Run Language="hu-hu" Text="."/><LineBreak/><LineBreak/><Run/></TextBlock>
@@ -58,10 +59,9 @@
             Style="{StaticResource MaterialDesignBody1TextBlock}" Margin="250,251,0,0" Height="32" VerticalAlignment="Top" HorizontalAlignment="Left" Width="286" FontSize="20" Text="Enable Vanguard tray at startup:"/>
         <ToggleButton x:Name="trayToggler"
             Style="{StaticResource MaterialDesignSwitchToggleButton}"
-            ToolTip="MaterialDesignSwitchLightToggleButton"
-            IsChecked="True" Margin="541,255,0,0" Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="49" Background="#FFD1373A" Checked="trayToggler_Checked" Unchecked="trayToggler_Unchecked" />
+            ToolTip="MaterialDesignSwitchLightToggleButton" Margin="541,255,0,0" Height="28" VerticalAlignment="Top" HorizontalAlignment="Left" Width="49" Background="#FFD1373A" Checked="trayToggler_Checked" Unchecked="trayToggler_Unchecked" />
         <Image Margin="55,54,0,0" Stretch="Fill" Source="logo.png" Height="198" VerticalAlignment="Top" HorizontalAlignment="Left" Width="171"/>
         <TextBlock
-            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="10,0,842,6" FontStyle="Italic" Height="23" VerticalAlignment="Bottom"><Run Language="hu-hu" Text="version 1.2"/><LineBreak/><LineBreak/><Run/></TextBlock>
+            Style="{StaticResource MaterialDesignCaptionTextBlock}" Margin="10,0,842,6" FontStyle="Italic" Height="23" VerticalAlignment="Bottom"><Run Language="hu-hu" Text="version 1.3"/><LineBreak/><LineBreak/><Run/></TextBlock>
     </Grid>
 </Window>
